<resources>
    <string name="app_name">QuestionQuizz</string>
    <string name="main_title">Question Quizz</string>
    <string name="main_joueur1_tv">Joueur 1</string>
    <string name="main_joueur2_tv">Joueur 2</string>
    <string name="main_start_bt">Start</string>
    <string name="game_go">Go</string>
    <string name="game_rejouer_bt">rejouer</string>
    <string name="game_menu_bt">menu</string>
    <string name="game_score_tv">0</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="setting_slider">Vitesse de défilement des questions</string>
    <string name="setting_title_tv">Paramètres</string>
    <string name="setting_valider_bt">Valider</string>
    <string name="setting_questions_tv">Questions</string>
    <string name="about">QuestionQuizz est un jeu qui se joue à deux personnes où le but est de gagner des points en répondant correctement à des questions.</string>
    <string name="erreur_player_name">Veuillez entrer un nom pour chaque joueur.</string>
</resources>